force-app/main/default/objects/eSignature_Provider__c/eSignature_Provider__c.object-meta.xml
<CustomObject>
    <description>Configures electronic signature provider integrations used for plan agreement and commission statement acknowledgment workflows.</description>
    <label>eSignature Provider</label>
    <nameField>
        <label>eSignature Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>eSignature Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>