force-app/main/default/objects/eSignature_Provider__c/fields/Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>Callback_URL__c</fullName>
    <description>The webhook callback URL that the eSignature provider calls to notify Salesforce of signing events.</description>
    <label>Callback URL</label>
    <type>Url</type>
</CustomField>