force-app/main/default/objects/eSignature_Provider__c/fields/Default_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Expiry_Days__c</fullName>
    <defaultValue>14</defaultValue>
    <description>Default number of days before a signing request expires if not completed by the recipient.</description>
    <label>Default Expiry Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>