force-app/main/default/objects/eSignature_Provider__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this eSignature provider integration is currently active and available for use.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>