force-app/main/default/objects/eSignature_Provider__c/fields/Last_Tested_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Tested_On__c</fullName>
    <description>Date and time when the eSignature provider connection was last tested for connectivity and authentication.</description>
    <label>Last Tested On</label>
    <type>DateTime</type>
</CustomField>