force-app/main/default/objects/eSignature_Provider__c/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>The Salesforce Named Credential used to authenticate API calls to the eSignature provider.</description>
    <label>Named Credential</label>
    <length>100</length>
    <type>Text</type>
</CustomField>