force-app/main/default/objects/eSignature_Provider__c/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <description>The eSignature provider platform used for document signing workflows.</description>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>AdobeSign</fullName>
            </value>
            <value>
                <fullName>HelloSign</fullName>
            </value>
            <value>
                <fullName>PandaDoc</fullName>
            </value>
            <value>
                <fullName>Custom_Webhook</fullName>
                <label>Custom Webhook</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>