force-app/main/default/objects/eSignature_Provider__c/fields/Reminder_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Days__c</fullName>
    <description>Comma-separated list of day intervals at which signing reminders are sent to recipients (e.g., 3,7,10).</description>
    <label>Reminder Days</label>
    <length>50</length>
    <type>Text</type>
</CustomField>