force-app/main/default/objects/eSignature_Provider__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <description>The default document template identifier in the eSignature provider used for signing envelopes.</description>
    <label>Template Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>