force-app/main/default/objects/eSignature_Provider__c/fields/Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Test_Status__c</fullName>
    <description>Result of the most recent connection test to the eSignature provider.</description>
    <label>Test Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not_Tested</fullName>
                <label>Not Tested</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>